welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
   // Write your code here
  if (estDevantMur()){
    return false
  }
  avance()
  if (getCouleurSol()!=Color.green){
    recule()
    return false
  }
  recule()
  return true
} 